new ruined code

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,10 @@
 # Uncomment this line to define a global platform for your project
 platform :ios, '13.0'
 
+# Remove these lines
+# $FirebaseSDKVersion = '10.18.0'
+# $GoogleMLKitVersion = '4.0.0'
+
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
@@ -31,14 +35,23 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
+  # Remove specific version constraints
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'FirebaseAuth', :modular_headers => true
+  pod 'GoogleMLKit/BarcodeScanning', :modular_headers => true
+
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # Add this block to set the deployment target for all pods
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+    end
   end
 end
