--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,6 +59,12 @@ android {
             signingConfig = signingConfigs.debug
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.22'
+        resolutionStrategy.force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22'
+        resolutionStrategy.force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22'
+    }
 }
 
 flutter {
