--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,14 @@ dependencies:
   fixnum: ^1.1.0
   riverpod: ^2.5.0
   badges: ^3.1.2
-  firebase_core: ^3.1.1
-  firebase_auth: ^5.1.1
+  firebase_core: ^3.5.0
+  # firebase_auth: ^5.3.0
+  firebase_auth: ^5.3.0
   mobile_scanner: ^5.1.1
   rename: ^3.0.2
   http: ^1.2.2
   flutter_native_splash: ^2.4.1
-  flutter_launcher_icons: ^0.13.1
+  flutter_launcher_icons: ^0.14.0
   hive:
   hive_flutter:
 
@@ -56,7 +57,7 @@ flutter_native_splash:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
