--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   rxdart: ^0.28.0
   file_picker: ^8.0.7
+  device_info_plus: ^11.2.0
+  universal_io: ^2.2.2
 
 
 
